# toy-synth

./: .gitignore  LICENSE  README.md  macos.txt  pyproject.toml  requirements.txt  windows.txt
reference/: chatgpt_pynput_demo.py  chatgpt_square_wave_gen.py
src/: main.py  settings.ini
src/communication/: __init__.py  mqtt_listener.py
src/input/: action_handler.py  listener.py
src/synth/: __init__.py  synth.py
src/synth/oscillator/: oscillator.py  square_wave_oscillator.py
src/synth/sample_player/: pyaudio_sample_player.py  sample_player.py
src/synth/signal/: component.py
test/: command_test_melody.sh  test-melody.sh  test-play-midi-file.sh
test/wave_samples/: 2023-4-13-sin.csv
toysynth/: __main__.py  main.py  settings.toml
toysynth/communication/: __init__.py  mailbox.py  message_builder.py  mqtt_listener.py
toysynth/configuration/: __init__.py  settings_reader.py
toysynth/controller/: controller.py
toysynth/midi/: __init__.py  midi_listener.py  midi_player.py  rtmidi_listener.py
toysynth/playback/: __init__.py  pyaudio_stream_player.py  stream_player.py
toysynth/playback/sample_player/: pyaudio_sample_player.py  sample_player.py
toysynth/synthesis/: __init__.py  synth.py  synthesizer.py
toysynth/synthesis/oscillator/: oscillator.py  square_wave_oscillator.py
toysynth/synthesis/sample_player/: pyaudio_sample_player.py
toysynth/synthesis/signal/: __init__.py  adsr_envelope.py  chain.py  component.py  constant_value_generator.py  delay.py  dual_mixer.py  gain.py  generator.py  low_pass_filter.py  mixer.py  noise_generator.py  utils.py  (+6 more)
(+9 files in other folders)
