[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toy-synth"
version = "0.0.1"
authors = [
  { name="Michael Skiles", email="mjrskiles@gmail.com" },
]
description = "A toy synthesizer"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]